# S4Chemist

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  OWNERS-GUIDE.txt  PLAN_KIMI.md  PLAN_NAV.md  README.md  USAGE.md  pyproject.toml  readme.txt  s4chemist_cli.py  s4chemist_cli.spec  s4mod_cli.py
.github/workflows/: tests.yml
docs/: packaging.md  sims4-mod-types.md  validation.md  workflow.md
examples/S4ChemistDemo/src/package/: package.template
examples/S4ChemistDemo/src/xml_snippets/AsphaltInstinct_skill/: AsphaltInstinct_skill.xml  README.txt
examples/S4ChemistDemo/src/xml_snippets/CoffeeJitters_buff/: CoffeeJitters_buff.xml  README.txt
examples/S4ChemistDemo/src/xml_snippets/CruiseControl_testset/: CruiseControl_testset.xml  README.txt
examples/S4ChemistDemo/src/xml_snippets/GasStopMystery_event/: GasStopMystery_event.xml  README.txt
generate-FancyOne-20260722185049/: .s4modstate
generate-FancyOne-20260722185049/src/xml_snippets/FancyOne_trait/: FancyOne_trait.xml  README.txt
generate-ME-20260722190625/: .s4modstate
generate-ME-20260722190625/src/ts4script/ME/: README.txt  main.py  manifest.json
release/: OWNERS-GUIDE.txt  readme.txt
release/docs/: packaging.md
sims4_mod_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_e2e.py  test_lifecycle.py  test_phases.py  test_smoke.py  test_tui.py  test_ui.py  test_workflow.py
tmp/generate-NightShift-20260721163624/: CHANGELOG.md
tmp/generate-NightWizard-20260721163826/: CHANGELOG.md
(+50 files in other folders)
